--- a/package.json
+++ b/package.json
@@ -5,12 +5,7 @@
   "main": "app.js",
   
   "scripts": {
-    "dev": "react-scripts start",
-"start": "serve -s build",
-"build": "react-scripts build",
-"test": "react-scripts test --env=jsdom",
-"eject": "react-scripts eject",
-"heroku-postbuild": "npm run build"
+    "start": "node app.js"
   },
   "author": "SPN",
   "license": "ISC",
